--- a/src/css/login.css
+++ b/src/css/login.css
@@ -25,9 +25,13 @@
 @media only screen and (min-width: 1200px) {
 
 }
+    
+.registerInputLayout {
+  width: 100%;
+}
 
 .progressLoadingLayout {
- justify-content: center;
+  justify-content: center;
   flex-direction: row;
   display: flex;
   width: 100%; 
